manifests/mailhog-add-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mailhog-add-prefix
  namespace: default
spec:
  addPrefix:
    prefix: /mailhog
