manifests/mailhog-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mailhog-strip-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /mailhog
