manifests/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: default
spec:
  containers:
    - name: debug-container
      image: busybox
      command: ["sleep", "120"]  # Keeps the pod running for debugging
      # volumeMounts:
      #   - name: init-scripts
      #     mountPath: /docker-entrypoint-initdb.d/init-redcap-db.sql
      #     subPath: init_redcap_db.sql
  # volumes:
  #   - name: init-scripts
  #     configMap:
  #       name: cm-rc-web
