manifests/dep-mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-mailhog
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
      - name: mailhog
        image: mailhog/mailhog:latest
        ports:
        - containerPort: 8025
        - containerPort: 1025
