manifests/svc-mailhog.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog-service
  namespace: default
spec:
  selector:
    app: mailhog
  ports:
    - name: web
      protocol: TCP
      port: 8025
      targetPort: 8025
    - name: email
      protocol: TCP
      port: 1025
      targetPort: 1025
  type: ClusterIP
