manifests/svc-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: default
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
