manifests/svc-redcap-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-rc-web
  namespace: default
spec:
  selector:
    app: rc-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
