manifests/mailhog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailhog-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: mailhog.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailhog-service
            port:
              number: 8025
